--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta charset="UTF-8">
     <meta name="description" content="Admin Dashboard Template"/>
-    <meta name="keywords" content="admin,dashboard"/>
-    <meta name="author" content="Steelcoders"/>
+    <meta name="keywords" content="AFix"/>
+    <meta name="author" content="Basheir"/>
+    <link rel="icon" href="images/favicon.ico">
 
     <!-- Styles -->
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
@@ -428,6 +429,7 @@
 <script src="js/SimpleAjaxUploader.js"></script>
 <script src="js/jquery.easy-autocomplete.min.js"></script>
 <script src="style/assets/plugins/select2/js/select2.min.js"></script>
+<script src="js/plugins/spin.min.js"></script>
 
 </body>
 </html>
