تمكين الفلترة حسب نوع الجهاز

--- a/index.html
+++ b/index.html
@@ -27,12 +27,9 @@
     <link href="style/assets/plugins/datatables/css/jquery.datatables.min.css" rel="stylesheet" type="text/css"/>
     <link href="style/assets/plugins/datatables/css/jquery.datatables.min.css" rel="stylesheet" type="text/css"/>
     <link href="style/assets/plugins/select2/css/select2.min.css" rel="stylesheet" type="text/css"/>
-
-    <!-- Theme Styles -->
     <link href="style/assets/css/modern.min.css" rel="stylesheet" type="text/css"/>
     <link href="style/assets/css/themes/green.css" class="theme-color" rel="stylesheet" type="text/css"/>
     <link href="style/assets/css/custom.css" rel="stylesheet" type="text/css"/>
-
     <link rel="stylesheet" href="css/progressBar/css/style.css">
     <link rel="stylesheet" href="css/Mycss.css">
     <link rel="stylesheet" href="css/ihover.css">
@@ -41,10 +38,6 @@
     <link rel="stylesheet" href="css/easy-autocomplete.min.css">
     <link rel="stylesheet" href="css/easy-autocomplete.themes.css">
     <link href="css/ggpopover.min.css" rel="stylesheet"/>
-
-
-    <script src="style/assets/plugins/3d-bold-navigation/js/modernizr.js"></script>
-    <script src="style/assets/plugins/offcanvasmenueffects/js/snap.svg-min.js"></script>
 
 
 </head>
@@ -127,7 +120,8 @@
 
 
 
-                        <button id="labelSearch" type="button" data-container="body" id="searchPopOver" data-toggle="popover"
+                        <button id="labelSearch" type="button" data-container="body" id="searchPopOver"
+                                data-toggle="popover"
                                 data-placement="bottom"
                                 data-content="
 
@@ -233,7 +227,7 @@
                                     class="fa fa-search"></i></a>
                         </li>
 
-                    
+
                         <li>
                             <a href="javascript:void(0);" class="waves-effect waves-button waves-classic"
                                id="showRight">
@@ -319,6 +313,8 @@
 <script src="js/jquery.easy-autocomplete.min.js"></script>
 <script src="style/assets/plugins/select2/js/select2.min.js"></script>
 <script src="js/plugins/spin.min.js"></script>
+<script src="style/assets/plugins/3d-bold-navigation/js/modernizr.js"></script>
+<script src="style/assets/plugins/offcanvasmenueffects/js/snap.svg-min.js"></script>
 
 </body>
 </html>
