اضافة مكتبة jquert.tpl

--- a/index.html
+++ b/index.html
@@ -279,10 +279,13 @@
     </div><!-- Page Sidebar -->
     <div class="page-inner">
         <div id="titlePage"></div>
-        <div id="Contener">
-            <div class="row">
-            </div><!-- Row -->
-        </div><!-- Main Wrapper -->
+
+        <div id="Contener" class="row">
+
+
+        </div><!-- Row -->
+
+
         <div class="page-footer">
             <p class="no-s">2016</p>
         </div>
@@ -307,7 +310,6 @@
 <script src="style/assets/plugins/datatables/js/jquery.datatables.js"></script>
 <script src="style/assets/js/modern.min.js"></script>
 <script src="style/assets/plugins/chartsjs/Chart.min.js"></script>
-<script src="js/MyJs.js"></script>
 <script src="js/notie.js"></script>
 <script src="js/SimpleAjaxUploader.js"></script>
 <script src="js/jquery.easy-autocomplete.min.js"></script>
@@ -315,6 +317,13 @@
 <script src="js/plugins/spin.min.js"></script>
 <script src="style/assets/plugins/3d-bold-navigation/js/modernizr.js"></script>
 <script src="style/assets/plugins/offcanvasmenueffects/js/snap.svg-min.js"></script>
+<script src="js/plugins/jqueryTmpl/jquery.tmpl.js"></script>
+<script src="js/MyJs.js"></script>
+
+
+<!--تمبلت الخاص بقائمة الاجهزة-->
+
+
 
 </body>
 </html>
