تمكين الفلترة حسب نوع الجهاز

--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
     <div class="input-group">
 
 
-        <input type="text" name="searchID" dataSearch="c" class="form-control search-input searchClassType"
+        <input type="text" name="searchID" id="searchID" dataSearch="c"
+               class="form-control search-input searchClassType"
                placeholder="Search...">
         <input type="text" name="searchBy" id="searchBy" value="m" style="display:none ">
 
