--- a/js/tpl/tpl.html
+++ b/js/tpl/tpl.html
@@ -81,3 +81,11 @@
 </script>
 
 
+<!-- تمبلت الخاص بعرض العملاء -->
+
+<script id="ListCustemerTpl" type="x-jquery-tmpl">
+<a  onclick="showListDevices({ID:${ID}});" href="#${ID}" class="showRight2"><img src="icons/custemers.png" alt=""><span>${Name}<small>${DateAdded}</small></span></a>
+
+</script>
+
+
