--- a/js/tpl/tpl.html
+++ b/js/tpl/tpl.html
@@ -84,7 +84,7 @@
 <!-- تمبلت الخاص بعرض العملاء -->
 
 <script id="ListCustemerTpl" type="x-jquery-tmpl">
-<a  onclick="showListDevices({ID:${ID}});" href="#${ID}" class="showRight2"><img src="icons/custemers.png" alt=""><span>${Name}<small>${DateAdded}</small></span></a>
+<a  onclick="showListDevices({by:'ID',ID:${ID}});" href="#${ID}" class="showRight2"><img src="icons/custemers.png" alt=""><span>${Name}<small>${DateAdded}</small></span></a>
 
 </script>
 
