اصلاح عرض بحسب نوع الجهاز

--- a/js/tpl/tpl.html
+++ b/js/tpl/tpl.html
@@ -71,7 +71,7 @@
 <!-- تمبلت الخاص بعرض انواع الاجهزة مع العدد -->
 
 <script id="dropdownMenuNotfctionTpl" type="x-jquery-tmpl">
-<li onclick=showListDevices({t:'${IDTypeDevice}'}) > <a href="#${type}"><div class="task-icon badge badge-success">
+<li onclick=showListDevices({t:'${IDTypeDevice}',by:'t'}) > <a href="#${type}"><div class="task-icon badge badge-success">
 <i class="fa fa-tablet"></i>
  </div><span class="badge badge-roundless badge-default pull-right">${count}</span>
  <p class="task-details">${type}</p></a>
