اضافة اهمية للجهاز

--- a/js/tpl/tpl.html
+++ b/js/tpl/tpl.html
@@ -62,6 +62,10 @@
                     class="close" aria-label="Close" data-original-title="تعديل مبلغ الصيانة"><span
                     class="glyphicon glyphicon-usd  toolsHeader"></span></button>
 
+            <button type="button" data-toggle="tooltip" data-placement="top" title="" onclick="editImportantDevices(${idDevices})"
+                    class="close" aria-label="Close" data-original-title="مهم"><span
+                    class="fa fa-eye  toolsHeader panel {{if important==1}} greenColor{{else}}redColor {{/if}}"></span></button>
+
 
         </div>
 
