--- a/index.html
+++ b/index.html
@@ -100,6 +100,8 @@
                                class="waves-effect waves-button waves-classic toggle-fullscreen"><i
                                     class="fa fa-expand"></i></a>
                         </li>
+
+
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle waves-effect waves-button waves-classic"
                                data-toggle="dropdown">
@@ -113,6 +115,26 @@
                                     </ul>
                                 </li>
                                 <li class="drop-all"><a href="#" class="text-center">اجهزة تحتاج صيانة</a></li>
+                            </ul>
+
+                        </li>
+
+
+                        <!--تنبيهات المهممة-->
+
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle waves-effect waves-button waves-classic"
+                               data-toggle="dropdown">
+                                <i class="fa fa-bell"></i><span id="dropdownMenuBdgImportant"
+                                                                class="badge badge-success pull-right">0</span></a>
+                            <ul class="dropdown-menu title-caret dropdown-lg" role="menu">
+
+                                <li class="dropdown-menu-list slimscroll tasks">
+                                    <ul id="dropdownMenuImportant" class="list-unstyled">
+
+                                    </ul>
+                                </li>
+                                <li class="drop-all"><a href="#" class="text-center">اجهزة مهمة</a></li>
                             </ul>
 
                         </li>
