--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle waves-effect waves-button waves-classic"
                                data-toggle="dropdown">
-                                <i class="fa fa-bell"></i><span id="dropdownMenuBdgImportant"
-                                                                class="badge badge-success pull-right">0</span></a>
+                                <i class="fa fa-eye"></i><span id="dropdownMenuBdgImportant"
+                                                               class="badge badge-success pull-right">0</span></a>
                             <ul class="dropdown-menu title-caret dropdown-lg" role="menu">
 
                                 <li class="dropdown-menu-list slimscroll tasks">
