اضافة ميزة وصل الجهاز للمعرض

--- a/js/tpl/tpl.html
+++ b/js/tpl/tpl.html
@@ -67,6 +67,13 @@
                     class="fa fa-eye  toolsHeader panel {{if important==1}} greenColor{{else}}redColor {{/if}}"></span></button>
 
 
+
+            <button type="button" data-toggle="tooltip" data-placement="top" title="" onclick="editInShowRoomDevices(${idDevices})"
+                    class="close" aria-label="Close" data-original-title="وصل المعرض"><span
+                    class="fa fa-ambulance  toolsHeader panel {{if InShowRoomDevices==1}} greenColor{{else}}redColor {{/if}}"></span>
+            </button>
+
+
         </div>
 
     </div>
