--- a/index.html
+++ b/index.html
@@ -140,6 +140,48 @@
                         </li>
 
 
+                        <!-- وصلت المعرض-->
+
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle waves-effect waves-button waves-classic"
+                               data-toggle="dropdown">
+                                <i class="fa  fa-ambulance fa-2"></i>
+                                <span id="dropdownMenuBdgInshowRoom" class="badge badge-success pull-right">0</span>
+                            </a>
+                            <ul class="dropdown-menu title-caret dropdown-lg" role="menu">
+
+                                <li class="dropdown-menu-list slimscroll tasks">
+                                    <ul id="dropdownMenuInshowRoom" class="list-unstyled">
+
+                                    </ul>
+                                </li>
+                                <li class="drop-all"><a href="#" class="text-center">اجهز وصلت المعرض</a></li>
+                            </ul>
+
+                        </li>
+
+
+                        <!--اكبر من تاريخ ثلاثون يوم -->
+
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle waves-effect waves-button waves-classic"
+                               data-toggle="dropdown">
+                                <i class="fa fa-calendar-o fa-2"></i>
+                                <span id="dropdownMenuBdgMaxDate" class="badge badge-success pull-right">0</span>
+                            </a>
+                            <ul class="dropdown-menu title-caret dropdown-lg" role="menu">
+
+                                <li class="dropdown-menu-list slimscroll tasks">
+                                    <ul id="dropdownMenuMaxDate" class="list-unstyled">
+
+                                    </ul>
+                                </li>
+                                <li class="drop-all"><a href="#" class="text-center">تاريخها تعدى 25 يوم</a></li>
+                            </ul>
+
+                        </li>
+
+
                         <li>
 
 
