تمكين الفلترة حسب نوع الجهاز

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="css/easy-autocomplete.min.css">
     <link rel="stylesheet" href="css/easy-autocomplete.themes.css">
     <link href="css/ggpopover.min.css" rel="stylesheet"/>
+    <link href="js/plugins/waitMe/waitMe.css" rel="stylesheet"/>
 
 
 </head>
@@ -344,6 +345,7 @@
 <script src="style/assets/plugins/offcanvasmenueffects/js/snap.svg-min.js"></script>
 <script src="js/plugins/jqueryTmpl/jquery.tmpl.js"></script>
 <script src="js/MyJs.js"></script>
+<script src="js/plugins/waitMe/waitMe.js"></script>
 
 
 <!--تمبلت الخاص بقائمة الاجهزة-->
