--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         </li>
 
 
-                        <li class="dropdown">
+                        <li class="dropdown" id="loadNotfctionBdg">
                             <a href="#" class="dropdown-toggle waves-effect waves-button waves-classic"
                                data-toggle="dropdown">
                                 <i class="fa fa-bell"></i><span id="dropdownMenuNotfctionBdg"
@@ -123,7 +123,7 @@
 
                         <!--تنبيهات المهممة-->
 
-                        <li class="dropdown">
+                        <li class="dropdown" id="loadImportant">
                             <a href="#" class="dropdown-toggle waves-effect waves-button waves-classic"
                                data-toggle="dropdown">
                                 <i class="fa fa-eye"></i><span id="dropdownMenuBdgImportant"
@@ -137,13 +137,12 @@
                                 </li>
                                 <li class="drop-all"><a href="#" class="text-center">اجهزة مهمة</a></li>
                             </ul>
-
                         </li>
 
 
                         <!-- وصلت المعرض-->
 
-                        <li class="dropdown">
+                        <li class="dropdown" id="loadInshowRoom">
                             <a href="#" class="dropdown-toggle waves-effect waves-button waves-classic"
                                data-toggle="dropdown">
                                 <i class="fa  fa-ambulance fa-2"></i>
@@ -164,7 +163,7 @@
 
                         <!--اكبر من تاريخ ثلاثون يوم -->
 
-                        <li class="dropdown">
+                        <li class="dropdown" id="loadMaxDate">
                             <a href="#" class="dropdown-toggle waves-effect waves-button waves-classic"
                                data-toggle="dropdown">
                                 <i class="fa fa-calendar-o fa-2"></i>
