--- a/js/tpl/tpl.html
+++ b/js/tpl/tpl.html
@@ -149,7 +149,7 @@
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                         aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="exampleModalLabel">تعديل جهاز</h4>
+                <h4 class="modal-title" id="exampleModalLabel">#تعديل جهاز</h4>
             </div>
             <div class="modal-body">
                 <form id="editCustemerAndDevices" action="editCustemerAndDevices.php" method="post"
