تصحيح خطا تعديل بينات الجهاز

--- a/js/tpl/tpl.html
+++ b/js/tpl/tpl.html
@@ -12,7 +12,7 @@
 
 
 
- <button type="button"  data-toggle="modal" data-target="#editDevicesTypeModal"  data-ID="${IdCustemer}"  class="close" aria-label="Close" data-original-title="تعديل" ><span class="fa fa-pencil toolsHeader"></span></button>
+ <button type="button"  data-toggle="modal" data-target="#editDevicesTypeModal"  data-ID="${idDevices}"  class="close" aria-label="Close" data-original-title="تعديل" ><span class="fa fa-pencil toolsHeader"></span></button>
 
 
 
