--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         </li>
 
 
-                        <li class="dropdown" id="loadNotfctionBdg">
+                        <li class="dropdown" loading="true" id="loadNotfctionBdg">
                             <a href="#" class="dropdown-toggle waves-effect waves-button waves-classic"
                                data-toggle="dropdown">
                                 <i class="fa fa-bell"></i><span id="dropdownMenuNotfctionBdg"
@@ -123,7 +123,7 @@
 
                         <!--تنبيهات المهممة-->
 
-                        <li class="dropdown" id="loadImportant">
+                        <li class="dropdown" loading="true" id="loadImportant">
                             <a href="#" class="dropdown-toggle waves-effect waves-button waves-classic"
                                data-toggle="dropdown">
                                 <i class="fa fa-eye"></i><span id="dropdownMenuBdgImportant"
@@ -142,7 +142,7 @@
 
                         <!-- وصلت المعرض-->
 
-                        <li class="dropdown" id="loadInshowRoom">
+                        <li class="dropdown" loading="true" id="loadInshowRoom">
                             <a href="#" class="dropdown-toggle waves-effect waves-button waves-classic"
                                data-toggle="dropdown">
                                 <i class="fa  fa-ambulance fa-2"></i>
@@ -163,7 +163,7 @@
 
                         <!--اكبر من تاريخ ثلاثون يوم -->
 
-                        <li class="dropdown" id="loadMaxDate">
+                        <li class="dropdown" loading="true" id="loadMaxDate">
                             <a href="#" class="dropdown-toggle waves-effect waves-button waves-classic"
                                data-toggle="dropdown">
                                 <i class="fa fa-calendar-o fa-2"></i>
@@ -339,7 +339,6 @@
 <script src="js/SimpleAjaxUploader.js"></script>
 <script src="js/jquery.easy-autocomplete.min.js"></script>
 <script src="style/assets/plugins/select2/js/select2.min.js"></script>
-<script src="js/plugins/spin.min.js"></script>
 <script src="style/assets/plugins/3d-bold-navigation/js/modernizr.js"></script>
 <script src="style/assets/plugins/offcanvasmenueffects/js/snap.svg-min.js"></script>
 <script src="js/plugins/jqueryTmpl/jquery.tmpl.js"></script>
