--- a/js/tpl/tpl.html
+++ b/js/tpl/tpl.html
@@ -48,7 +48,7 @@
                     class="glyphicon  glyphicon-pushpin toolsHeader"></span></button>
 
 
-            <button type="button" data-placement="bottom" data-poload="json/getStatusDevices.php?ID=${idDevices}"
+            <button type="button" data-placement="top" data-poload="json/getStatusDevices.php?ID=${idDevices}"
                     class="close" aria-label="Close" data-original-title="" title=""><span
                     class="glyphicon  glyphicon-comment toolsHeader"></span></button>
 
