--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
     <link rel="stylesheet" href="css/progressBar/css/style.css">
     <link rel="stylesheet" href="css/Mycss.css">
     <link rel="stylesheet" href="css/ihover.css">
-    <link rel="stylesheet" href="js/sweetalert/dist/sweetalert.css">
     <link href="css/stylesUploadFile.css" rel="stylesheet">
     <link rel="stylesheet" href="css/easy-autocomplete.min.css">
     <link rel="stylesheet" href="css/easy-autocomplete.themes.css">
@@ -344,6 +343,7 @@
 <script src="js/plugins/jqueryTmpl/jquery.tmpl.js"></script>
 <script src="js/MyJs.js"></script>
 <script src="js/plugins/waitMe/waitMe.js"></script>
+<script src="js/plugins/move/move.min.js"></script>
 
 
 <!--تمبلت الخاص بقائمة الاجهزة-->
