اضافة تحميل لزر البحث

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                         <input type="text" class="form-control" value="n" name="searchBy" id="searchBy"
                                                style="display: none">
 
-                                        <div class="input-group-btn">
+                                        <div class="input-group-btn" id="serachLoading">
                                             <button type="button" class="btn btn-search btn-success">
                                                 <span class="glyphicon glyphicon-user"></span>
                                                 <span class="label-icon">الاسم</span>
