اضافة تحميل لزر البحث

--- a/js/tpl/tpl.html
+++ b/js/tpl/tpl.html
@@ -119,7 +119,7 @@
 </script>
 
 
-<!-- تمبلت الخاص  -->
+<!-- تمبلت الخاص تعدت تاريخ 25 يوم  -->
 
 <script id="MaxDateTpl" type="x-jquery-tmpl">
 <li onclick=showListDevices({t:'${IDTypeDevice}',by:'t',Parm:'MaxDate'}) > <a href="#${type}"><div class="task-icon badge badge-success">
