--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
                                                style="display: none">
 
                                         <div class="input-group-btn" id="serachLoading">
-                                            <button type="button" class="btn btn-search btn-success">
+                                            <button type="button" id="TitleBtnSearch"
+                                                    class="btn btn-search btn-success">
                                                 <span class="glyphicon glyphicon-user"></span>
                                                 <span class="label-icon">الاسم</span>
                                             </button>
