اضافة مسح لمحتويات البحث

--- a/index.html
+++ b/index.html
@@ -201,6 +201,10 @@
                                         <input type="text" class="form-control" value="n" name="searchBy" id="searchBy"
                                                style="display: none">
 
+                                        <span class="input-group-btn" id="clearSearch">
+			                            <a class="btn btn-default text-muted" href="#" title="Clear"><i
+                                                class="glyphicon glyphicon-remove"></i> </a>
+	                                    </span>
                                         <div class="input-group-btn" id="serachLoading">
                                             <button type="button" id="TitleBtnSearch"
                                                     class="btn btn-search btn-success">
