--- a/form/newCustemer.html
+++ b/form/newCustemer.html
@@ -26,6 +26,7 @@
                 </div>
             </div>
 
+
             <div class="form-group">
                 <label for="IDTypeDeviceTitle" class="col-sm-2 control-label">نوع جهاز</label>
                 <div class="col-sm-10">
@@ -35,6 +36,18 @@
 
                 </div>
             </div>
+
+
+            <div class="form-group">
+                <label for="SizeMemoryDeviceTitle" class="col-sm-2 control-label">حجم الذاكرة</label>
+                <div class="col-sm-10">
+                    <input type="input" class="form-control" name="SizeMemoryDeviceTitle" id="SizeMemoryDeviceTitle"
+                           placeholder="حجم الذاكرة" required>
+                    <input type="text" name="SizeMemoryDevice" id="SizeMemoryDevice" style="display: none"/>
+
+                </div>
+            </div>
+
 
             <div class="form-group">
                 <label for="Comment" class="col-sm-2 control-label">ملاحظة</label>
