--- a/form/newCustemer.html
+++ b/form/newCustemer.html
@@ -27,6 +27,21 @@
             </div>
 
 
+            <!--<div class="row">-->
+            <!--<div class="col-xs-2">-->
+            <!--<input type="text" class="form-control" placeholder=".col-xs-2">-->
+            <!--</div>-->
+            <!--<div class="col-xs-3">-->
+            <!--<input type="text" class="form-control" placeholder=".col-xs-3">-->
+            <!--</div>-->
+            <!--<div class="col-xs-4">-->
+            <!--<input type="text" class="form-control" placeholder=".col-xs-4">-->
+            <!--</div>-->
+            <!--</div>-->
+
+
+
+
             <div class="form-group">
                 <label for="IDTypeDeviceTitle" class="col-sm-2 control-label">نوع جهاز</label>
                 <div class="col-sm-10">
@@ -35,6 +50,7 @@
                     <input type="text" name="IDTypeDevice" id="IDTypeDevice" style="display: none"/>
 
                 </div>
+
             </div>
 
 
@@ -43,8 +59,6 @@
                 <div class="col-sm-10">
                     <input type="input" class="form-control" name="SizeMemoryDeviceTitle" id="SizeMemoryDeviceTitle"
                            placeholder="حجم الذاكرة" required>
-                    <input type="text" name="SizeMemoryDevice" id="SizeMemoryDevice" style="display: none"/>
-
                 </div>
             </div>
 
