--- a/form/newCustemer.html
+++ b/form/newCustemer.html
@@ -76,6 +76,13 @@
                 </div>
             </div>
 
+            <div class="form-group">
+                <div class="col-sm-offset-5 col-sm-10">
+                    <button type="submit" class="btn  btn-success btn-lg">حفظ</button>
+                    
+                </div>
+            </div>
+
 
 
         </div>
