--- a/index.html
+++ b/index.html
@@ -310,6 +310,10 @@
                         class="menu-icon glyphicon glyphicon-stats"></span>
                     <p>عرض بياني</p></a></li>
 
+                <li><a onclick="mysqlBackUp();" href="#getChart" class="waves-effect waves-button"><span
+                        class="menu-icon glyphicon glyphicon-stats"></span>
+                    <p>نسخ احتياطي</p></a></li>
+
 
             </ul>
         </div><!-- Page Sidebar Inner -->
