--- a/form/newCustemer.html
+++ b/form/newCustemer.html
@@ -19,11 +19,18 @@
                 </div>
             </div>
 
+
             <div class="form-group">
                 <label for="Serial" class="col-sm-2 control-label">Serial</label>
-                <div class="col-sm-10">
+
+                <div class="input-group">
+                  <span class="input-group-btn">
+                    <button class="btn btn-default"
+                            onclick="openActiveStatusApple('https://www.icloud.com/activationlock/')" type="button">Apple Check Serial </button>
+                  </span>
                     <input type="input" class="form-control" name="Serial" id="Serial" placeholder="Serial">
-                </div>
+                </div><!-- /input-group -->
+
             </div>
 
 
@@ -38,7 +45,6 @@
             <!--<input type="text" class="form-control" placeholder=".col-xs-4">-->
             <!--</div>-->
             <!--</div>-->
-
 
 
             <div class="form-group">
