--- a/index.html
+++ b/index.html
@@ -306,6 +306,11 @@
                         class="menu-icon glyphicon glyphicon-briefcase"></span>
                     <p>نوع جهاز</p></a></li>
 
+                <li><a onclick="getListTypeDevices();" href="#getListTypeDevices"
+                       class="waves-effect waves-button"><span
+                        class="menu-icon glyphicon glyphicon-briefcase"></span>
+                    <p>عرض انواع الاجهزة</p></a></li>
+
                 <li><a onclick="getChart();" href="#getChart" class="waves-effect waves-button"><span
                         class="menu-icon glyphicon glyphicon-stats"></span>
                     <p>عرض بياني</p></a></li>
@@ -333,6 +338,29 @@
     </div><!-- Page Inner -->
 </main><!-- Page Content -->
 <div class="cd-overlay"></div>
+
+
+<div id="myModalImagesViewrer" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Modal title</h4>
+            </div>
+            <div class="modal-body">
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
+
 
 
 <!--ادوات التول بار الخاصة بارسال -->
