تعديل القائمة وحساب الاجهزة

--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
                         </li>
 
 
+
+
                         <!--اكبر من تاريخ ثلاثون يوم -->
 
                         <li class="dropdown" loading="true" id="loadMaxDate">
@@ -169,7 +171,7 @@
                                 <i class="fa fa-calendar-o fa-2"></i>
                                 <span id="dropdownMenuBdgMaxDate" class="badge badge-success pull-right">0</span>
                             </a>
-                            <ul class="dropdown-menu title-caret dropdown-lg" role="menu">
+                            <ul class="dropdown-menu title-caret dropdown-lg" id="listMAxDate" role="menu">
 
                                 <li class="dropdown-menu-list slimscroll tasks">
                                     <ul id="dropdownMenuMaxDate" class="list-unstyled">
